  when gtk2 is detected by configure. To force terminatorX to use the good
  old gtk 1.2.x (x>=5) run configure with the '--disable-gtk2' switch.
  WARNING: gdkxft-users: gtk2 applications segfault when preloading
  libgdk_xft.so! So unset LD_PRELOAD and set GDK_USE_XFT=1 instead.
- Applied a patch from Adrian that brings lots of new stuff:
  - Debian package support  
  - enhanced GNOME integration
  - a manpage for terminatorX
- Included another gcc3 fix thanks to Gregor Riepl <seto-kun@freesurf.ch>
- Improved configure's compatibilty - it should detect pthreads more reliably
  and it should detect ladspa.h when located in /usr/local/include without
  /usr/local/include being contained in the include path.
- This release should compile and run on FreeBSD systems and possibly
  OpenBSD, too. Thanks for help and testing this goes to 
  Tilman Linneweh <tilman@arved.de>.
- Sequencer now refuses to play when no events available - and displays
  a dialog that suggests running the audio engine.
- De-uglified the terminatorX note dialog.
- Fixed gtk+2 signals for load file dialog
- Pre-listen support for mpg321
- Added a new auto-hiding "panel-bar" to which turntable control and audio
  panels can be minimized to.
- Cleaned up the turntables' audio panel for better looks and easier usage
- Rewrote the engine thread completely - unlike before the engine thread 
  is created on startup and kept alive until termination.
- terminatorX can now be run suid root - and it might even be safe. After
  creating the engine thread both terminatorX threads drop root privileges
  before evaluating any parameters or reading/writing files, etc. The problem
  is the pthread "manager thread" is out of control of terminatorX code - so
  I cannot tell that thread to drop privileges.
- Fixed Drag'n'Drop for GNOME 2
- Deleted tons of old outdated code in tX_engine.cc and tX_mastergui.cc

[v3.72]
- Applied a patch from Matthew Evans <activesx@hotmail.com> that introduces 